--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,28 @@
-#hero{
-    height: 100vh;
+h2 {
+  font-size: 20px;
 }
+
+.botonSubmit {
+  background-color: #5F4E4E;
+  color: white;
+}
+
+.inputForm, .textForm {
+  border: 1px solid #727272;
+  border-radius: 10px;
+  height: 24px;
+}
+
+.labelForm {
+  font-size: 10px;
+  color: #727272;
+}
+
+.textForm {
+  height: 66px;
+}
+
+.tituloContacto {
+  color: #727272;
+}
+/*# sourceMappingURL=styles.css.map */
