--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,24 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  margin: 0;
+  padding: 0;
+}
+
+.container-fluid {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f8f7f5;
+}
+
 h2 {
   font-size: 20px;
 }
@@ -24,5 +45,27 @@ h2 {
 
 .tituloContacto {
   color: #727272;
+  padding: 0;
+}
+
+#footer {
+  height: 99px;
+  background-color: #9B9393;
+}
+
+#footer img {
+  width: 61px;
+  height: 45.64px;
+}
+
+#footer p {
+  color: #F9F8F6;
+  font-size: 10px;
+  margin-bottom: 0;
+}
+
+#footer p a {
+  color: #F9F8F6;
+  text-decoration: none;
 }
 /*# sourceMappingURL=styles.css.map */
