--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,3 +1,23 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.row {
+    margin: 0;
+    padding: 0;
+}
+
+.container-fluid {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #f8f7f5;
+}
+
 h2 {
     font-size: 20px;
 }
@@ -25,4 +45,26 @@ h2 {
 
 .tituloContacto {
     color: #727272;
+    padding: 0;
+}
+
+#footer {
+    height: 99px;
+    background-color: #9B9393;
+
+    img {
+        width: 61px;
+        height: 45.64px;
+    }
+
+    p {
+        color: #F9F8F6;
+        font-size: 10px;
+        margin-bottom: 0;
+
+        a {
+            color: #F9F8F6;
+            text-decoration: none;
+        }
+    }
 }
