--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,6 +1,6 @@
-@import url('../fonts/CENSCBK.TTF');
-@import url('../fonts/Chathura-Regular.ttf');
-@import url('../fonts/creato_display/CreatoDisplay-Regular.otf');
+// @import url('../fonts/CENSCBK.TTF');
+// @import url('../fonts/Chathura-Regular.ttf');
+// @import url('../fonts/creato_display/CreatoDisplay-Regular.otf');
 
 $font-body: 'Creato Display',
 sans-serif;
@@ -11,6 +11,7 @@ $c1:#F8F7F5;
 $c2:#D7D2D2;
 $c3:#9B9393;
 $c4:#5F4E4E;
+$c5:#727272;
 
 
 
@@ -44,41 +45,51 @@ h1 {
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 45px;
 }
 
 .offcanvas-start {
     width: 75vw;
 }
 
-.botonSubmit {
-    background-color: $c2;
-    color: white;
+.tituloContacto {
+    color: $c5;
+    padding: 0;
+    margin-bottom: 42px;
+    margin-top: 68px;
 }
 
 .inputForm {
-    border: 1px solid #727272;
+    border: 1px solid $c5;
     border-radius: 10px;
-    height: 24px;
+    height: 42px;
+    background-color: $c1;
+    margin-bottom: 23px;
 }
 
 .labelForm {
-    font-size: 10px;
-    color: #727272;
+    font-size: 25px;
+    color: $c5;
+    margin-bottom: 10px;
 }
 
 .textForm {
     @extend .inputForm;
-    height: 66px;
+    height: 120px;
 }
 
-.tituloContacto {
-    color: #727272;
-    padding: 0;
+.botonSubmit {
+    background-color: $c4;
+    color: white;
+    margin-top: 45px;
+    margin-bottom: 82px;
+    width: 109px;
+    height: 45px;
 }
 
 #header {
     nav {
+
         h1 {
             margin-bottom: 0;
         }
@@ -91,6 +102,12 @@ h2 {
 
 #products {
     background-color: $c3;
+    padding-top: 67px;
+    padding-bottom: 57.34px;
+
+    h2 {
+        color: white;
+    }
 
     .card {
         background-color: transparent;
@@ -100,32 +117,48 @@ h2 {
 
         .card-title {
             text-transform: capitalize;
-            font-size: 12px;
+            font-size: 25px;
+            margin-bottom: 0;
+            width: auto;
         }
 
         img {
-            height: 201px;
-            width: 159px;
+            height: 347.98px;
+            width: 274.72px;
             border-radius: 2px;
         }
 
-        .btn {
-            background-color: transparent;
-            color: #FFF;
-            border-color: #FFF;
-            border-radius: 15px;
-            font-size: 8px;
+        a {
+            text-decoration: none;
+
+            .btnVerMas {
+                width: 88px;
+                height: 29.66px;
+                background-color: transparent;
+                color: #FFF;
+                border: 0.5px solid white;
+                border-radius: 5px;
+                font-size: 18px;
+                margin-top: 10.19px;
+    
+                p {
+                    margin-bottom: 0;
+                }
+            }
         }
     }
 }
 
 #about {
+
+    margin-top: 66px;
+    margin-bottom: 66px;
+
     div {
         margin: 0px 15px;
     }
 
     h2 {
-        margin-left: 15px;
         color: $c3;
     }
 
@@ -134,30 +167,32 @@ h2 {
         font-weight: bold;
     }
 
-    img {
-        width: 134px;
-        height: 177px;
-        margin-left: 12px;
-        border-radius: 2px;
-    }
+    // img {
+    //     width: 134px;
+    //     height: 177px;
+    //     margin-left: 12px;
+    //     border-radius: 2px;
+    // }
 
     p {
-        font-size: 10px;
+        font-size: 25px;
+        line-height: 29.7px;
+        color: black;
     }
 }
 
 #footer {
-    height: 99px;
-    background-color: $c2;
+    height: 297px;
+    background-color: $c3;
 
     img {
-        width: 61px;
-        height: 45.64px;
+        width: 225.23px;
+        height: 168.51px;
     }
 
     p {
         color: #F9F8F6;
-        font-size: 10px;
+        font-size: 30px;
         margin-bottom: 0;
 
         a {
