--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,6 +1,3 @@
-@import url("../fonts/CENSCBK.TTF");
-@import url("../fonts/Chathura-Regular.ttf");
-@import url("../fonts/creato_display/CreatoDisplay-Regular.otf");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -32,36 +29,45 @@ h1 {
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 45px;
 }
 
 .offcanvas-start {
   width: 75vw;
 }
 
-.botonSubmit {
-  background-color: #D7D2D2;
-  color: white;
+.tituloContacto {
+  color: #727272;
+  padding: 0;
+  margin-bottom: 42px;
+  margin-top: 68px;
 }
 
 .inputForm, .textForm {
   border: 1px solid #727272;
   border-radius: 10px;
-  height: 24px;
+  height: 42px;
+  background-color: #F8F7F5;
+  margin-bottom: 23px;
 }
 
 .labelForm {
-  font-size: 10px;
+  font-size: 25px;
   color: #727272;
+  margin-bottom: 10px;
 }
 
 .textForm {
-  height: 66px;
+  height: 120px;
 }
 
-.tituloContacto {
-  color: #727272;
-  padding: 0;
+.botonSubmit {
+  background-color: #5F4E4E;
+  color: white;
+  margin-top: 45px;
+  margin-bottom: 82px;
+  width: 109px;
+  height: 45px;
 }
 
 #header nav h1 {
@@ -74,6 +80,12 @@ h2 {
 
 #products {
   background-color: #9B9393;
+  padding-top: 67px;
+  padding-bottom: 57.34px;
+}
+
+#products h2 {
+  color: white;
 }
 
 #products .card {
@@ -85,21 +97,39 @@ h2 {
 
 #products .card .card-title {
   text-transform: capitalize;
-  font-size: 12px;
+  font-size: 25px;
+  margin-bottom: 0;
+  width: auto;
 }
 
 #products .card img {
-  height: 201px;
-  width: 159px;
+  height: 347.98px;
+  width: 274.72px;
   border-radius: 2px;
 }
 
-#products .card .btn {
+#products .card a {
+  text-decoration: none;
+}
+
+#products .card a .btnVerMas {
+  width: 88px;
+  height: 29.66px;
   background-color: transparent;
   color: #FFF;
-  border-color: #FFF;
-  border-radius: 15px;
-  font-size: 8px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  font-size: 18px;
+  margin-top: 10.19px;
+}
+
+#products .card a .btnVerMas p {
+  margin-bottom: 0;
+}
+
+#about {
+  margin-top: 66px;
+  margin-bottom: 66px;
 }
 
 #about div {
@@ -107,7 +137,6 @@ h2 {
 }
 
 #about h2 {
-  margin-left: 15px;
   color: #9B9393;
 }
 
@@ -116,30 +145,25 @@ h2 {
   font-weight: bold;
 }
 
-#about img {
-  width: 134px;
-  height: 177px;
-  margin-left: 12px;
-  border-radius: 2px;
-}
-
 #about p {
-  font-size: 10px;
+  font-size: 25px;
+  line-height: 29.7px;
+  color: black;
 }
 
 #footer {
-  height: 99px;
-  background-color: #D7D2D2;
+  height: 297px;
+  background-color: #9B9393;
 }
 
 #footer img {
-  width: 61px;
-  height: 45.64px;
+  width: 225.23px;
+  height: 168.51px;
 }
 
 #footer p {
   color: #F9F8F6;
-  font-size: 10px;
+  font-size: 30px;
   margin-bottom: 0;
 }
 
