--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -112,6 +112,47 @@ h2 {
   margin-bottom: 0;
 }
 
+#products .modal-header {
+  background-color: #F8F7F5;
+}
+
+#products .modal-body {
+  background-color: #F8F7F5;
+}
+
+#products .modal-detalles {
+  padding: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#products .modal-detalles h2 {
+  text-transform: capitalize;
+  padding-left: 0;
+  color: #9B9393;
+}
+
+#products .modal-detalles button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  border-style: none;
+  border-radius: 5px;
+  color: #F8F7F5;
+  background-color: #5F4E4E;
+  padding: 1% 3%;
+  margin: 4% 0;
+}
+
+#products .modal-detalles p {
+  font-size: .6em;
+}
+
 #products .card {
   background-color: transparent;
   border-style: none;
@@ -138,13 +179,10 @@ h2 {
 #products .card .btnVerMas {
   background-color: transparent;
   color: #F8F7F5;
+  padding: 3% 5%;
   border: 1px solid #F8F7F5;
   border-radius: 5px;
   font-size: 0.5em;
-}
-
-#products .card .btnVerMas p {
-  margin-bottom: 0;
 }
 
 #footer {
@@ -203,7 +241,7 @@ h2 {
 #toTop {
   background-color: #727272;
   font-size: .5em;
-  border-radius: 2px;
+  border-radius: 8%;
   text-align: center;
   border: 2px solid #D7D2D2;
   color: #F8F7F5;
