--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -114,13 +114,22 @@ h2 {
 
 #products .modal-header {
   background-color: #F8F7F5;
+  border-radius: 10px;
+}
+
+#products .modal-dialog {
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 
 #products .modal-body {
   background-color: #F8F7F5;
+  border-radius: 10px;
 }
 
 #products .modal-detalles {
+  border-radius: 10px;
   padding: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -135,6 +144,7 @@ h2 {
   text-transform: capitalize;
   padding-left: 0;
   color: #9B9393;
+  font-size: 1.25em;
 }
 
 #products .modal-detalles button {
@@ -146,11 +156,13 @@ h2 {
   color: #F8F7F5;
   background-color: #5F4E4E;
   padding: 1% 3%;
-  margin: 4% 0;
+  margin-bottom: 4%;
+  font-size: .75em;
 }
 
 #products .modal-detalles p {
   font-size: .6em;
+  margin-bottom: 4%;
 }
 
 #products .card {
@@ -319,6 +331,15 @@ h2 {
   }
   #products h2 {
     padding-left: 24px;
+  }
+  #products .modal-detalles p {
+    font-size: .3em;
+  }
+  #products .modal-detalles h2 {
+    font-size: .6em;
+  }
+  #products .modal-detalles button {
+    font-size: .4em;
   }
   #about img {
     width: 391px;
