--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -144,13 +144,19 @@ h2 {
 
     .modal-header {
         background-color: $c1;
+        border-radius: 10px;
     }
-
+    .modal-dialog{
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
     .modal-body {
         background-color: $c1;
+        border-radius: 10px;
     }
 
     .modal-detalles {
+        border-radius: 10px;
         padding: 5%;
         display: flex;
         flex-direction: column;
@@ -159,6 +165,7 @@ h2 {
             text-transform: capitalize;
             padding-left: 0;
             color: $c3;
+            font-size: 1.25em;
         }
 
         button {
@@ -168,11 +175,13 @@ h2 {
             color: $c1;
             background-color: $c4;
             padding: 1% 3%;
-            margin: 4% 0;
+            margin-bottom: 4%;
+            font-size: .75em;
         }
 
         p {
             font-size: .6em;
+            margin-bottom: 4%;
         }
     }
 
@@ -359,6 +368,17 @@ h2 {
     #products {
         h2 {
             padding-left: 24px;
+        }
+        .modal-detalles {
+            p{
+                font-size: .3em;
+            }
+            h2{
+                font-size: .6em;
+            }
+            button{
+                font-size: .4em;
+            }
         }
     }
 
