--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -114,7 +114,6 @@ h2 {
 
 #products .modal-header {
   background-color: #F8F7F5;
-  border-radius: 10px;
 }
 
 #products .modal-dialog {
@@ -153,11 +152,15 @@ h2 {
       align-self: center;
   border-style: none;
   border-radius: 5px;
-  color: #F8F7F5;
   background-color: #5F4E4E;
   padding: 1% 3%;
   margin-bottom: 4%;
   font-size: .75em;
+}
+
+#products .modal-detalles button a {
+  text-decoration: none;
+  color: #F8F7F5;
 }
 
 #products .modal-detalles p {
