--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -144,7 +144,6 @@ h2 {
 
     .modal-header {
         background-color: $c1;
-        border-radius: 10px;
     }
     .modal-dialog{
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -172,11 +171,14 @@ h2 {
             align-self: center;
             border-style: none;
             border-radius: 5px;
-            color: $c1;
             background-color: $c4;
             padding: 1% 3%;
             margin-bottom: 4%;
             font-size: .75em;
+            a{
+                text-decoration: none;
+                color: $c1;
+            }
         }
 
         p {
