--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,4 +1,5 @@
-$font-body: 'Lato', sans-serif;
+$font-body: 'Lato',
+sans-serif;
 $font-logo: 'Century Schoolbook',
 sans-serif;
 $font-footer:'Chathura',
@@ -136,10 +137,12 @@ h2 {
     .modal-header {
         background-color: $c1;
     }
-    .modal-dialog{
+
+    .modal-dialog {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
     }
+
     .modal-body {
         background-color: $c1;
         border-radius: 10px;
@@ -166,7 +169,8 @@ h2 {
             padding: 1% 3%;
             margin-bottom: 4%;
             font-size: .75em;
-            a{
+
+            a {
                 text-decoration: none;
                 color: $c1;
             }
@@ -365,14 +369,17 @@ h2 {
         h2 {
             padding-left: 24px;
         }
+
         .modal-detalles {
-            p{
+            p {
                 font-size: .3em;
             }
-            h2{
+
+            h2 {
                 font-size: .6em;
             }
-            button{
+
+            button {
                 font-size: .4em;
             }
         }
