--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -19,9 +20,11 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
 }
+
 body p {
   margin: 0;
 }
+
 body h1 {
   font-size: 1rem;
 }
@@ -45,41 +48,50 @@ h2 {
 #header nav .offcanvas {
   background-color: #D7D2D2;
 }
+
 #header nav .offcanvas-title {
   font-size: 2em;
   font-family: "Century Schoolbook", sans-serif;
   color: #9B9393;
 }
+
 #header nav .offcanvas-footer img {
   width: 15.64vw;
-  height: 11.73vw;
+  height: calc(15.64vw*0.75);
   margin-top: 2.3%;
   margin-bottom: 2.4%;
 }
+
 #header nav button {
   border-style: none;
 }
+
 #header nav button:focus {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 #about {
   margin: 4.4%;
 }
+
 #about h2 {
   color: #9B9393;
   margin-bottom: 5%;
 }
+
 #about span {
   font-style: italic;
   font-weight: bold;
 }
+
 #about img {
   border-radius: 2px;
   width: 34vw;
-  height: 45.22vw;
+  height: calc(34vw*1.33);
   margin-left: 4%;
 }
+
 #about p {
   font-size: 0.625em;
   color: black;
@@ -89,64 +101,85 @@ h2 {
   background-color: #9B9393;
   padding: 4.4% 4%;
 }
+
 #products a {
   text-decoration: none;
 }
+
 #products h2 {
   color: #F8F7F5;
   padding-left: 12px;
   margin-bottom: 0;
 }
+
 #products .modal-header {
   background-color: #F8F7F5;
 }
+
 #products .modal-dialog {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
+
 #products .modal-body {
   background-color: #F8F7F5;
   border-radius: 10px;
 }
+
 #products .modal-detalles {
   border-radius: 10px;
   padding: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 #products .modal-detalles h2 {
   text-transform: capitalize;
   padding-left: 0;
   color: #9B9393;
   font-size: 1.25em;
 }
+
 #products .modal-detalles button {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   border-style: none;
   border-radius: 5px;
   background-color: #5F4E4E;
   padding: 1% 3%;
   margin-bottom: 4%;
-  font-size: 0.75em;
+  font-size: .75em;
 }
+
 #products .modal-detalles button a {
   text-decoration: none;
   color: #F8F7F5;
 }
+
 #products .modal-detalles p {
-  font-size: 0.6em;
+  font-size: .6em;
   margin-bottom: 4%;
 }
+
 #products .card {
   background-color: transparent;
   border-style: none;
   color: #F8F7F5;
   text-align: center;
 }
+
 #products .card .card-body {
   padding-right: 0;
   padding-left: 0;
 }
+
 #products .card .card-title {
   text-transform: capitalize;
   font-size: 0.6em;
@@ -154,9 +187,11 @@ h2 {
   width: auto;
   font-weight: 300;
 }
+
 #products .card img {
   border-radius: 2px;
 }
+
 #products .card .btnVerMas {
   background-color: transparent;
   color: #F8F7F5;
@@ -170,18 +205,21 @@ h2 {
 #footer {
   background-color: #9B9393;
 }
+
 #footer img {
   width: 15.64vw;
-  height: 11.73vw;
+  height: calc(15.64vw*0.75);
   margin-top: 2.3%;
   margin-bottom: 2.4%;
 }
+
 #footer p {
   color: #F8F7F5;
   font-size: 0.625em;
   margin-bottom: 3%;
-  font-family: "Chathura", sans-serif;
+  font-family: 'Chathura', sans-serif;
 }
+
 #footer p a {
   color: #F8F7F5;
   text-decoration: none;
@@ -190,6 +228,7 @@ h2 {
 #contact {
   margin: 4.8% 0 5.7% 0;
 }
+
 #contact .inputForm, #contact .textForm {
   border: 1px solid #727272;
   border-radius: 10px;
@@ -199,14 +238,17 @@ h2 {
   font-size: 0.625em;
   padding: 5px 5px 5px 10px;
 }
+
 #contact .labelForm {
   font-size: 0.625em;
   color: #727272;
   margin-bottom: 1%;
 }
+
 #contact .textForm {
   height: 20%;
 }
+
 #contact .botonSubmit {
   background-color: #5F4E4E;
   color: #F8F7F5;
@@ -216,7 +258,7 @@ h2 {
 
 #toTop {
   background-color: #727272;
-  font-size: 0.5em;
+  font-size: .5em;
   border-radius: 8%;
   text-align: center;
   border: 2px solid #D7D2D2;
@@ -234,15 +276,12 @@ h2 {
   body {
     font-size: 16px;
   }
-
   .offcanvas-start {
     width: 75vw;
   }
-
   .navbar .tabs {
     display: none;
   }
-
   .navbar-brand {
     font-size: 16px;
   }
@@ -250,13 +289,16 @@ h2 {
     font-size: 1.875em;
   }
 }
+
 @media screen and (min-width: 1400px) {
   body {
     font-size: 40px;
   }
-
   .navbar {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .navbar .navbar-brand {
     font-size: 40px;
@@ -265,17 +307,22 @@ h2 {
     font-size: 1.1em;
   }
   .navbar .navbar-brand h2 {
-    font-size: 0.3em;
+    font-size: .3em;
   }
   .navbar .tabs {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .navbar .tabs ul {
     padding-left: 0;
   }
   .navbar .tabs li {
-    font-size: 0.5em;
+    font-size: .5em;
     list-style: none;
   }
   .navbar .tabs li a {
@@ -288,22 +335,21 @@ h2 {
   .navbar .offcanvas-start {
     display: none;
   }
-
   #products h2 {
     padding-left: 24px;
   }
   #products .modal-detalles p {
-    font-size: 0.3em;
+    font-size: .3em;
   }
   #products .modal-detalles h2 {
-    font-size: 0.6em;
+    font-size: .6em;
   }
   #products .modal-detalles button {
-    font-size: 0.4em;
+    font-size: .4em;
   }
-
   #about img {
     width: 391px;
     height: 514px;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
+/*# sourceMappingURL=styles.css.map */
